--- a/app/src/main/res/layout-land/activity_light_screen.xml
+++ b/app/src/main/res/layout-land/activity_light_screen.xml
@@ -14,17 +14,15 @@
         android:id="@+id/light_for_ID"
         android:layout_width="157dp"
         android:layout_height="37dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="112dp"
         android:fontFamily="@font/bungee2"
         android:text="@string/light_for"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toEndOf="@+id/colorwheel_ID"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
     <ImageButton
         android:id="@+id/button_chaircolor_ID"
@@ -64,8 +62,8 @@
         android:id="@+id/stopChair_lightScreen_ID2"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/stop_button"
         android:contentDescription="@string/stopchair"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,8 +108,8 @@
 
     <Button
         android:id="@+id/saveAsFavoriteColor_ID"
-        android:layout_width="90dp"
-        android:layout_height="38dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginTop="28dp"
 
         android:background="@drawable/rounded_corners"
@@ -125,9 +123,9 @@
 
     <Button
         android:id="@+id/showFavoriteButton_ID"
-        android:layout_width="90dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
@@ -209,7 +207,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintHorizontal_bias="0.088"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -217,32 +215,36 @@
         android:id="@+id/seekBar2"
         android:layout_width="222dp"
         android:layout_height="11dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="488dp"
         android:max="255"
         android:min="0"
+        android:orientation="horizontal"
         android:progressDrawable="@drawable/blacktowhite"
         android:rotation="-90"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickfromcolorwheel" />
 
     <ImageView
         android:id="@+id/colorwheel_ID"
-        android:layout_width="266dp"
-        android:layout_height="238dp"
+        android:layout_width="267dp"
+        android:layout_height="206dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/colorwheel"
         android:src="@drawable/colorwheel"
         app:layout_constraintEnd_toEndOf="@+id/pickfromcolorwheel"
+        app:layout_constraintHorizontal_bias="0.323"
         app:layout_constraintStart_toStartOf="@+id/pickfromcolorwheel"
         app:layout_constraintTop_toBottomOf="@+id/pickfromcolorwheel" />
 
     <View
         android:id="@+id/ausgabe"
-        android:layout_width="218dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="201dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
         android:background="@color/snoozeBlau"
         app:layout_constraintEnd_toEndOf="@+id/colorwheel_ID"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.318"
         app:layout_constraintStart_toStartOf="@+id/colorwheel_ID"
         app:layout_constraintTop_toBottomOf="@+id/colorwheel_ID" />
 
@@ -272,13 +274,14 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/blue"
         app:layout_constraintStart_toEndOf="@+id/blue"
-        app:layout_constraintTop_toTopOf="@+id/blue" />
+        app:layout_constraintTop_toTopOf="@+id/blue"
+        app:layout_constraintVertical_bias="0.4" />
 
     <EditText
         android:id="@+id/editText_G_ID"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="36dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/nr2"
@@ -296,7 +299,7 @@
         android:id="@+id/editText_R_ID"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="28dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/nr1"
@@ -312,36 +315,37 @@
 
     <TextView
         android:id="@+id/yellow"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/radiusgreen"
         android:foregroundGravity="center"
-        android:gravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/G"
-        android:textAlignment="center"
+        android:textAlignment="inherit"
         android:textColor="#000000"
-        android:textSize="50sp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/red"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/red"
         tools:text="G" />
 
     <TextView
         android:id="@+id/red"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/radiusred"
         android:foregroundGravity="center"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/R"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:textSize="50sp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/colorShowView_ID"
         app:layout_constraintHorizontal_bias="0.0"
@@ -351,19 +355,20 @@
 
     <TextView
         android:id="@+id/blue"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/radiusblue"
         android:gravity="center"
         android:isScrollContainer="false"
         android:text="@string/B"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="50sp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/yellow"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline11"
         app:layout_constraintTop_toBottomOf="@+id/yellow"
         tools:text="B" />
@@ -373,7 +378,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="90dp" />
+        app:layout_constraintGuide_end="93dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline19"
@@ -381,6 +386,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="931dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="480dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
