--- a/app/src/main/res/layout-land/activity_music_screen.xml
+++ b/app/src/main/res/layout-land/activity_music_screen.xml
@@ -59,51 +59,57 @@
         android:id="@+id/textView9"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginStart="192dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/picktheme"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.249"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline17" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="176dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/ownmusic"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline6"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.732"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline17" />
 
     <Button
         android:id="@+id/playFavoriteThemeButton"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="348dp"
-        android:layout_marginTop="432dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
         android:background="@drawable/red_rounded_corners"
         android:text="@string/play_favorite"
         android:textColor="#0B0A0A"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintStart_toEndOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintTop_toTopOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/saveFovriteThemeButton"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="432dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDescriptionView" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
@@ -136,12 +142,12 @@
         android:id="@+id/stopChair_musicScreen_ID"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="504dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/stop_button"
         android:contentDescription="@string/stopchair"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/pausebutton" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -154,49 +160,48 @@
         android:id="@+id/textDescriptionView"
         android:layout_width="285dp"
         android:layout_height="54dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="12dp"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/listview"
+        app:layout_constraintHorizontal_bias="0.031"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/listview" />
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="317dp"
         android:layout_height="197dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/SoundControl"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="172dp"
+        android:layout_width="263dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="176dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/soundcontrol"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spotifyButton_ID"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintEnd_toEndOf="@+id/textView10"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <ImageButton
         android:id="@+id/musicLibraryButton"
         android:layout_width="86dp"
         android:layout_height="65dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="44dp"
         android:backgroundTint="#006e8c"
         android:contentDescription="@string/musiclibrary"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/spotifyButton_ID"
         app:layout_constraintEnd_toStartOf="@+id/spotifyButton_ID"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="@+id/spotifyButton_ID"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/musiclibrary" />
@@ -205,40 +210,41 @@
         android:id="@+id/spotifyButton_ID"
         android:layout_width="76dp"
         android:layout_height="65dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="204dp"
         android:backgroundTint="#006e8c"
         android:contentDescription="@string/spotify"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toTopOf="@+id/guideline17"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
         app:srcCompat="@drawable/spotify" />
 
     <ImageButton
         android:id="@+id/playbutton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/playbutton"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/pausebutton"
         app:layout_constraintEnd_toStartOf="@+id/pausebutton"
         app:layout_constraintTop_toTopOf="@+id/pausebutton"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/playsoundbutton" />
 
     <ImageButton
         android:id="@+id/pausebutton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="160dp"
         android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/pausebutton"
         android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SoundControl"
-        app:srcCompat="@drawable/pausesoundbutton"
-        tools:layout_editor_absoluteX="726dp" />
+        app:srcCompat="@drawable/pausesoundbutton" />
 
     <ImageButton
         android:id="@+id/stopsoundbutton"
@@ -250,11 +256,23 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/playbutton"
         app:layout_constraintEnd_toStartOf="@+id/playbutton"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="@+id/SoundControl"
         app:layout_constraintTop_toTopOf="@+id/playbutton"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/stopsoundbutton" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="93dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="24dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
