--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -59,58 +59,55 @@
         android:id="@+id/textView9"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/picktheme"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/listview"
-        app:layout_constraintEnd_toEndOf="@+id/listview"
-        app:layout_constraintHorizontal_bias="0.404"
-        app:layout_constraintStart_toStartOf="@+id/listview"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="308dp"
         android:layout_height="39dp"
+        android:layout_marginTop="44dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/ownmusic"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.862" />
+        app:layout_constraintEnd_toEndOf="@+id/stopsoundbutton"
+        app:layout_constraintHorizontal_bias="0.37"
+        app:layout_constraintStart_toStartOf="@+id/playbutton"
+        app:layout_constraintTop_toBottomOf="@+id/pausebutton" />
 
     <Button
         android:id="@+id/playFavoriteThemeButton"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="24dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/red_rounded_corners"
         android:text="@string/play_favorite"
         android:textColor="#0B0A0A"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textDescriptionView"
-        app:layout_constraintTop_toBottomOf="@+id/textDescriptionView" />
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintStart_toEndOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintTop_toTopOf="@+id/saveFovriteThemeButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/saveFovriteThemeButton"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
-        app:layout_constraintEnd_toStartOf="@+id/playFavoriteThemeButton"
-        app:layout_constraintHorizontal_bias="0.336"
-        app:layout_constraintStart_toStartOf="@+id/textDescriptionView"
+        android:textSize="10dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDescriptionView" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -129,7 +126,7 @@
         android:layout_marginBottom="140dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_begin="601dp" />
+        app:layout_constraintGuide_begin="570dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
@@ -144,14 +141,12 @@
         android:id="@+id/stopChair_musicScreen_ID"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="724dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/stop_button"
         android:contentDescription="@string/stopchair"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.981" />
+        app:layout_constraintTop_toTopOf="@+id/guideline17" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -162,93 +157,88 @@
 
     <TextView
         android:id="@+id/textDescriptionView"
-        android:layout_width="350dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="384dp"
+        android:layout_width="327dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="12dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/listview"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/listview"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
+        app:layout_constraintTop_toBottomOf="@+id/listview" />
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="352dp"
-        android:layout_height="278dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="356dp"
+        android:layout_height="261dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/textDescriptionView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/SoundControl"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginTop="88dp"
         android:fontFamily="@font/bungee2"
         android:gravity="center"
         android:text="@string/soundcontrol"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.67" />
+        app:layout_constraintEnd_toEndOf="@+id/textDescriptionView"
+        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintStart_toStartOf="@+id/textDescriptionView"
+        app:layout_constraintTop_toBottomOf="@+id/textDescriptionView" />
 
     <ImageButton
         android:id="@+id/musicLibraryButton"
-        android:layout_width="84dp"
-        android:layout_height="86dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="764dp"
         android:backgroundTint="#006e8c"
         android:contentDescription="@string/musiclibrary"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/spotifyButton_ID"
-        app:layout_constraintHorizontal_bias="0.276"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline17"
         app:srcCompat="@drawable/musiclibrary" />
 
     <ImageButton
         android:id="@+id/spotifyButton_ID"
-        android:layout_width="79dp"
-        android:layout_height="81dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="48dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="44dp"
         android:backgroundTint="#006e8c"
         android:contentDescription="@string/spotify"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintBottom_toBottomOf="@+id/musicLibraryButton"
+        app:layout_constraintStart_toEndOf="@+id/musicLibraryButton"
+        app:layout_constraintTop_toTopOf="@+id/musicLibraryButton"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/spotify" />
 
     <ImageButton
         android:id="@+id/playbutton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginBottom="156dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/playbutton"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="@+id/pausebutton"
         app:layout_constraintEnd_toStartOf="@+id/pausebutton"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SoundControl"
         app:layout_constraintTop_toTopOf="@+id/pausebutton"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/playsoundbutton" />
 
     <ImageButton
         android:id="@+id/pausebutton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="24dp"
         android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/pausebutton"
         android:scaleType="fitCenter"
@@ -262,13 +252,12 @@
         android:id="@+id/stopsoundbutton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/stopsound"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/SoundControl"
+        app:layout_constraintTop_toBottomOf="@+id/SoundControl"
         app:srcCompat="@drawable/stopsoundbutton" />
 
 
