--- a/app/src/main/res/layout/activity_seat_screen.xml
+++ b/app/src/main/res/layout/activity_seat_screen.xml
@@ -251,13 +251,14 @@
 
     <Button
         android:id="@+id/savebutton_ID"
-        android:layout_width="117dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
+        android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="@+id/seekBarDown_ID"
-        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/seekBarDown_ID"
         app:layout_constraintTop_toBottomOf="@+id/seekBarDown_ID" />
 
@@ -281,7 +282,7 @@
         android:id="@+id/stopChair_seatScreen_ID"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/stop_button"
         app:layout_constraintEnd_toEndOf="parent"
