--- a/app/src/main/res/layout-land/activity_light_screen.xml
+++ b/app/src/main/res/layout-land/activity_light_screen.xml
@@ -125,7 +125,7 @@
         android:id="@+id/showFavoriteButton_ID"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
@@ -215,13 +215,12 @@
         android:id="@+id/seekBar2"
         android:layout_width="222dp"
         android:layout_height="11dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="488dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginEnd="640dp"
         android:max="255"
         android:min="0"
         android:orientation="horizontal"
         android:progressDrawable="@drawable/blacktowhite"
-        android:rotation="-90"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickfromcolorwheel" />
 
@@ -239,12 +238,12 @@
 
     <View
         android:id="@+id/ausgabe"
-        android:layout_width="201dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/snoozeBlau"
+        android:layout_width="174dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/rounded_corners"
         app:layout_constraintEnd_toEndOf="@+id/colorwheel_ID"
-        app:layout_constraintHorizontal_bias="0.318"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="@+id/colorwheel_ID"
         app:layout_constraintTop_toBottomOf="@+id/colorwheel_ID" />
 
@@ -252,6 +251,7 @@
         android:id="@+id/hex"
         android:layout_width="118dp"
         android:layout_height="23dp"
+        android:layout_marginTop="8dp"
         android:text="@string/hex"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="@+id/ausgabe"
