--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -92,7 +92,7 @@
         android:background="@drawable/red_rounded_corners"
         android:text="@string/play_favorite"
         android:textColor="#0B0A0A"
-        android:textSize="10dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/saveFovriteThemeButton"
         app:layout_constraintStart_toEndOf="@+id/saveFovriteThemeButton"
         app:layout_constraintTop_toTopOf="@+id/saveFovriteThemeButton"
@@ -106,7 +106,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
-        android:textSize="10dp"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDescriptionView" />
 
@@ -158,7 +158,7 @@
     <TextView
         android:id="@+id/textDescriptionView"
         android:layout_width="327dp"
-        android:layout_height="59dp"
+        android:layout_height="65dp"
         android:layout_marginTop="12dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/listview"
