--- a/app/src/main/res/drawable-mdpi/blacktowhite.xml
+++ b/app/src/main/res/drawable-mdpi/blacktowhite.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#000000"
-                android:endColor="#FFFFFF"
+                android:startColor="#FFFFFF"
+                android:endColor="#000000"
 
                 />
         </shape>
