black to white und seekbar angepasst

--- a/app/src/main/res/layout-land/activity_light_screen.xml
+++ b/app/src/main/res/layout-land/activity_light_screen.xml
@@ -111,27 +111,27 @@
         android:layout_width="100dp"
         android:layout_height="30dp"
 
-        android:layout_marginStart="372dp"
+        android:layout_marginStart="356dp"
         android:layout_marginBottom="84dp"
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
         android:textColor="#000000"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_roomcolor_ID"
-        app:layout_constraintVertical_bias="0.993" />
+        app:layout_constraintVertical_bias="0.966" />
 
     <Button
         android:id="@+id/showFavoriteButton_ID"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="52dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
         android:textColor="#000000"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/saveAsFavoriteColor_ID"
         app:layout_constraintStart_toEndOf="@+id/saveAsFavoriteColor_ID"
         app:layout_constraintTop_toTopOf="@+id/saveAsFavoriteColor_ID"
@@ -216,11 +216,12 @@
         android:id="@+id/seekBar2"
         android:layout_width="222dp"
         android:layout_height="11dp"
-        android:layout_marginTop="240dp"
-        android:layout_marginEnd="640dp"
-        android:max="255"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="648dp"
+        android:max="510"
         android:min="0"
         android:orientation="horizontal"
+        android:progress="255"
         android:progressDrawable="@drawable/blacktowhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickfromcolorwheel" />
@@ -254,7 +255,7 @@
         android:layout_height="23dp"
         android:layout_marginTop="8dp"
         android:text="@string/hex"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/ausgabe"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ausgabe"
@@ -326,7 +327,7 @@
         android:text="@string/G"
         android:textAlignment="inherit"
         android:textColor="#000000"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/red"
         app:layout_constraintHorizontal_bias="0.0"
@@ -346,7 +347,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#000000"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/colorShowView_ID"
         app:layout_constraintHorizontal_bias="0.0"
@@ -366,7 +367,7 @@
         android:text="@string/B"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/yellow"
         app:layout_constraintHorizontal_bias="0.0"
