--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -83,7 +83,7 @@
         android:background="@drawable/rounded_corners"
         android:text="@string/save_as_favorite"
         android:textColor="#000000"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/hex"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/hex"
@@ -138,7 +138,7 @@
         android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
         android:textColor="#000000"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/saveAsFavoriteColor_ID"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/saveAsFavoriteColor_ID"
@@ -185,7 +185,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/editText_G_ID"
         app:layout_constraintEnd_toEndOf="@+id/editText_G_ID"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editText_G_ID" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -243,10 +243,11 @@
         android:id="@+id/seekBar2"
         android:layout_width="248dp"
         android:layout_height="0dp"
-        android:layout_marginStart="324dp"
-        android:layout_marginTop="384dp"
-        android:max="255"
+        android:layout_marginStart="316dp"
+        android:layout_marginTop="392dp"
+        android:max="510"
         android:min="0"
+        android:progress="255"
         android:progressDrawable="@drawable/blacktowhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -255,7 +256,7 @@
         android:id="@+id/editText_G_ID"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="53dp"
         android:ems="10"
         android:gravity="center"
         android:hint="@string/nr2"
@@ -285,7 +286,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/blue"
         app:layout_constraintStart_toEndOf="@+id/blue"
         app:layout_constraintTop_toTopOf="@+id/blue"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <TextView
         android:id="@+id/blue"
